--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(fmt CONFIG REQUIRED)
 find_package(OpenSSL REQUIRED)
-find_package(Boost REQUIRED COMPONENTS asio beast url json system program_options multiprecision)
+find_package(Boost REQUIRED COMPONENTS asio beast url json system program_options multiprecision pfr)
 find_package(glog REQUIRED)
 find_package(cryptopp REQUIRED)
 
@@ -34,6 +34,7 @@ target_link_libraries(BitCoinTrader
     Boost::system
     Boost::program_options
     Boost::multiprecision
+    Boost::pfr
     glog::glog
     cryptopp::cryptopp
 )
