--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release/*.tar.gz  # 上传所有tar.gz文件
-          asset_name: ${{ github.ref_name }}.tar.gz
-          asset_content_type: application/gzip
+          asset_path: ./release/packages/b/bitcointrader/linux/x86_64/debug/bin/*  # 上传所有tar.gz文件
+          asset_name: ${{ github.ref_name }}
+          asset_content_type: application/binary
